# Happy-Bot

./: .breakpoints  keep_alive.py  learning.py  main.py  pyproject.toml  stopwords.py  wordStat.py
learned/: learned.txt
