[tool.poetry]
name = "repl_python3_Happy-Bot"
version = "0.1.0"
description = ""
authors = ["Hugues Gauthier <hugues.gauthier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
replit = "^3.2.4"
ffmpy = "^0.3.0"
PyNaCl = "^1.5.0"
ffmpeg = "^1.4"
jsonpickle = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
